Add section title

--- a/main.tex
+++ b/main.tex
@@ -498,30 +498,26 @@
             &= \mathbf z^\top\mathbf R\mathbf z + \mathbf z^\top \mathbf R \mathbf R^{-1} \mathbf m + \mathrm{const.} \Longrightarrow \mbox{Completing the square!}
         \end{align*}
     \end{frame}
+    
+    \section{\S2.3.4 Maximum likelihood for the Gaussian}
 
     \begin{frame}{Title}
         Hello metropolis!
     \end{frame}
 
-    \begin{frame}{Title}
-        Hello metropolis!
-    \end{frame}
+    \section{\S2.3.5 Sequential estimation}
 
     \begin{frame}{Title}
         Hello metropolis!
     \end{frame}
 
-    \begin{frame}{Title}
-        Hello metropolis!
-    \end{frame}
+    \section{\S2.3.6 Bayesian inference for the Gaussian}
 
     \begin{frame}{Title}
         Hello metropolis!
     \end{frame}
 
-    \begin{frame}{Title}
-        Hello metropolis!
-    \end{frame}
+    \section{\S2.3.7 Student's t-distribution}
 
     \begin{frame}{Title}
         Hello metropolis!
