--- a/main.tex
+++ b/main.tex
@@ -67,10 +67,6 @@
         \tableofcontents
     \end{frame}
     
-    \begin{supframe}{Review: Multivariate Gaussian Distribution}
-        Hello metropolis!
-    \end{supframe}
-    
     \begin{frame}{Completing the square (for univariate case)}
         \begin{itemize}
             \item Basic idea:
@@ -158,7 +154,7 @@
             \highlightcap[blue]{p(\mathbf x_a | \mathbf x_b)}{Unknown}
             = \frac{\highlightcaphead[red]{p(\mathbf x_a, \mathbf x_b)}{Known}}{\highlightcap[blue]{p(\mathbf x_b)}{Unknown}}
         \end{align*}
-        両辺の対数をとる
+        Take the logarithm of both sides, 
         \begin{align*}
             \ln p(\mathbf x_a | \mathbf x_b) 
             &= \ln p(\mathbf x_a, \mathbf x_b) + \mathrm{const.} \\
@@ -548,22 +544,87 @@
             -\frac{1}{2}\sum_{n=1}^N (\mathbf x_n - \bm\mu)^\top\bm\Sigma^{-1}(\mathbf x_n - \bm\mu)
             \tag{2.118}
         \end{align*}
-        Sufficient statistics:
+        We see that the log-likelihood depends on the dataset only the quantities (the proof is next slide):
+        \begin{align*}
+            \sum_{n=1}^{N} \mathbf x_n \;\;\;\;\;\;\;\;\;\;
+            \sum_{n=1}^{N} \mathbf x_n\mathbf x_n^\top
+            \tag{2.119}
+        \end{align*}
+        These are know as the \textit{sufficient statistics} for  the Gauss.
+
+        \note{
+            尤度関数の中のデータ集合への依存は次の2つの量のみ
+        }
     \end{frame}
 
-    \begin{supframe}{Proof: }
+    \begin{supframe}{Proof: the log-likelihood depends on the dataset only the sufficient stats}
         \begin{align*}
             &-\frac{1}{2}\sum_{n=1}^N (\mathbf x_n - \bm\mu)^\top\bm\Sigma^{-1}(\mathbf x_n - \bm\mu) \\
             &=-\frac{1}{2}\sum_{n=1}^N \mathbf x_n^\top\bm\Sigma^{-1}\mathbf x_n
             + \left( \sum_{n=1}^N \mathbf x_n \right)^\top\bm\Sigma^{-1}\bm\mu
             -\frac{N}{2}\bm\mu^\top\bm\Sigma^{-1}\bm\mu \\
-            &=-\frac{1}{2}\tr\left(\bm\Sigma^{-1}\sum_{n=1}^N \mathbf x_n\mathbf x_n^\top\right)
+            &=-\frac{1}{2}\highlightcap[red]{\displaystyle\tr\left(\bm\Sigma^{-1}\sum_{n=1}^N \mathbf x_n\mathbf x_n^\top\right)}{(C.9) and linearity of trace}
             + \left( \sum_{n=1}^N \mathbf x_n \right)^\top\bm\Sigma^{-1}\bm\mu
             -\frac{N}{2}\bm\mu^\top\bm\Sigma^{-1}\bm\mu \\
             &=-\frac{1}{2}\tr\nbracket{\bm\Sigma^{-1} \abracket{\mathbf x\mathbf x^\top}}
             + \abracket{\mathbf x}^\top\bm\Sigma^{-1}\bm\mu
             -\frac{N}{2}\bm\mu^\top\bm\Sigma^{-1}\bm\mu
         \end{align*}
+        Where, 
+        \begin{align*}
+            \abracket{\mathbf x} \equiv \sum_{n=1}^{N} \mathbf x_n \;\;\;\;\;\;\;\;
+            \abracket{\mathbf x\mathbf x^\top} \equiv \sum_{n=1}^{N} \mathbf x_n\mathbf x_n^\top
+        \end{align*}
+    \end{supframe}
+
+    \begin{frame}{Derivation of ML solutions}
+        The log-likelihood (definition of notation is prev slide):
+        \begin{align*}
+            \ln p(\mathbf X | \bm\mu, \bm\Sigma) = 
+            -\frac{ND}{2}\ln(2\pi) - \frac{N}{2}\ln |\bm\Sigma|
+            -\frac{1}{2}\tr\nbracket{\bm\Sigma^{-1} \abracket{\mathbf x\mathbf x^\top}} \\
+            \quad 
+            + \abracket{\mathbf x}^\top\bm\Sigma^{-1}\bm\mu
+            -\frac{N}{2}\bm\mu^\top\bm\Sigma^{-1}\bm\mu
+            \tag{2.118'}
+        \end{align*}
+        By setting the derivative of the log-likelihood with respect to $\bm\mu$ and $\bm\Sigma^{-1}$ to zero, like
+        \begin{align*}
+            \frac{\partial}{\partial \bm\mu}\ln p(\mathbf X|\bm\mu, \bm\Sigma) = \mathbf 0 \;\;\;\;\;\;\;
+            \frac{\partial}{\partial \bm\Sigma^{-1}}\ln p(\mathbf X|\bm\mu, \bm\Sigma) = O 
+        \end{align*}
+        we obtain the solution for ML given by:
+        \begin{align*}
+            \bm\mu_\mathrm{ML} &= \frac{1}{N}\abracket{\mathbf x} = \frac{1}{N} \sum_{n=1}^N \mathbf x_n \tag{2.121} \\
+            \bm\Sigma_\mathrm{ML} &= \frac{1}{N}\abracket{\mathbf x\mathbf x^\top} - \bm\mu\bm\mu^\top
+            = \frac{1}{N} \sum_{n=1}^N (\mathbf x_n - \bm\mu_\mathrm{ML})(\mathbf x_n - \bm\mu_\mathrm{ML})^\top \tag{2.122} \\
+        \end{align*}
+    \end{frame}
+
+    \begin{supframe}{Derivation of the ML solution $\bm\mu_\mathrm{ML}$}
+
+    \end{supframe}
+    
+    \begin{supframe}{Derivation of the ML solution $\bm\Sigma_\mathrm{ML}$}
+
+    \end{supframe}
+
+    \begin{frame}{Unbiased estimator}
+        By evaluating $\mathbb E[\bm\mu_\mathrm{ML}]$ and $\mathbb E[\bm\Sigma_\mathrm{ML}]$ under the true distribution, 
+        we obtain:
+        \begin{align*}
+            \mathbb E[\bm\mu_\mathrm{ML}] &= \bm\mu \tag{2.123} \\
+            \mathbb E[\bm\Sigma_\mathrm{ML}] &= \frac{N-1}{N}\bm\Sigma \tag{2.124}
+        \end{align*}
+        We can correct the bias of $\mathbb E[\bm\Sigma_\mathrm{ML}]$ by defining
+        \begin{align*}
+            \widetilde{\bm\Sigma} &= \frac{1}{N-1}\sum_{n=1}^N (\mathbf x_n - \bm\mu_\mathrm{ML})(\mathbf x_n - \bm\mu_\mathrm{ML})^\top \tag{2.125} \\
+            &\Rightarrow \;\; \mathbb E[\widetilde{\bm\Sigma}] = \bm\Sigma
+        \end{align*}
+    \end{frame}
+    
+    \begin{supframe}{Solution of Ex.(2.35)}
+
     \end{supframe}
 
     \begin{frame}{Title}
@@ -571,6 +632,14 @@
     \end{frame}
 
     \section{\S2.3.5 Sequential estimation}
+
+    \begin{frame}{Title}
+        Hello metropolis!
+    \end{frame}
+
+    \begin{frame}{Title}
+        Hello metropolis!
+    \end{frame}
 
     \begin{frame}{Title}
         Hello metropolis!
