--- a/main.tex
+++ b/main.tex
@@ -34,9 +34,38 @@
 
 \newcommand{\redtext}[1]{\textcolor{red}{#1}}
 \newcommand{\bluetext}[1]{\textcolor{blue}{#1}}
-\newcommand{\highlight}[2][yellow]{\tikz[baseline=(x.base)]{\node[rectangle,rounded corners,fill=#1!10](x){$#2$};}}
-\newcommand{\highlightcap}[3][yellow]{\tikz[baseline=(x.base)]{\node[rectangle,rounded corners,fill=#1!10](x){$#2$} node[below of=x, node distance=2em, color=#1]{#3};}}
-\newcommand{\highlightcaphead}[3][yellow]{\tikz[baseline=(x.base)]{\node[rectangle,rounded corners,fill=#1!10](x){$#2$} node[above of=x, node distance=2em, color=#1]{#3};}}
+\newcommand<>{\greentext}[1]{\alt#2{\textcolor{green}{#1}}{#1}}
+\newcommand<>{\highlight}[2][yellow]{%
+    \alt#3{%
+        \tikz[baseline=(x.base)]{
+            \node[rectangle,rounded corners,fill=#1!10](x){$#2$};
+        }%
+    }{%
+        #2
+    }%
+}
+
+\newcommand<>{\highlightcap}[3][yellow]{%
+    \alt#4{%
+        \tikz[baseline=(x.base)]{
+            \node[rectangle,rounded corners,fill=#1!10](x){$#2$};
+            \node[anchor=north, color=#1, align=center] at (x.south) {#3};
+        }%
+    }{%
+        #2
+    }%
+}
+
+\newcommand<>{\highlightcaphead}[3][yellow]{%
+    \alt#4{%
+        \tikz[baseline=(x.base)]{
+            \node[rectangle,rounded corners,fill=#1!10](x){$#2$};
+            \node[anchor=south, color=#1, align=center] at (x.north) {#3};
+        }%
+    }{%
+        #2
+    }%
+}
 
 \newenvironment{supframe}[1]{%
     \setbeamercolor{frametitle}{fg=white!90!purple, bg=mLightGreen!75!black}%
@@ -72,16 +101,14 @@
             \item Basic idea:
                 \begin{align*}
                     &x^2 - 6x + 2 \\
-                    \onslide*<2>{&= x^2 - 6x + 9 - 7 \\}
-                    \onslide<3->{&= \highlight[red]{x^2 - 6x + 9} - 7 \\}
-                    \onslide<4->{&= \highlight[red]{(x - 3)^2} - 7}
+                    &= \highlight<2->[red]{x^2 - 6x + 9} - 7 \\
+                    \onslide<3->{&= \highlight[red]{(x - 3)^2} - 7}
                 \end{align*}
             \item Example:
                 \begin{align*}
                     &\exp\left(-\frac{1}{2}x^2 + 2x + \mathrm{const.}\right) \\
                     \onslide<6->{&= \exp\left\{-\frac{1}{2}(x^2 - 4x + 4) + \mathrm{const.}\right\} \\}
-                    \onslide*<7>{&= \exp\left\{-\dfrac{(x - 2)^2}{2}\right\}\cdot\exp(\mathrm{const.}) \\ }
-                    \onslide<8->{&= \highlightcap[red]{\exp\left\{-\dfrac{(x - 2)^2}{2}\right\}}{\small Unnormalized Gaussian}\cdot\exp(\mathrm{const.}) }
+                    \onslide<7->{&= \highlightcap<8->[red]{\exp\left\{-\dfrac{(x - 2)^2}{2}\right\}}{\small Unnormalized Gaussian}\cdot\exp(\mathrm{const.}) }
                 \end{align*}
         \end{itemize}
     \end{frame}
@@ -646,6 +673,93 @@
     \end{frame}
 
     \section{\S2.3.6 Bayesian inference for the Gaussian}
+
+    \begin{frame}{Maximum Likelihood Estimation vs. Bayesian Inference}
+        Hello metropolis!
+    \end{frame}
+
+    \begin{frame}{The task of inferring the mean $\mu$ (the variance $\sigma^2$ is known)}
+        \begin{itemize}
+            \item A set of $N$ observations: $\mathbf X = \cbracket{x_1, \cdots, x_N}$
+            \item The likelihood function (the prob. of the observed data given $\mu$):
+                \begin{align*}
+                    p(\mathbf X | \mu) = \prod_{n=1}^N p(x_n | \mu)
+                    = \frac{1}{(2\pi\sigma^2)^{N/2}}\exp\cbracket{-\frac{1}{2\sigma^2}\sum_{n=1}^N (x_n - \mu)^2} \tag{2.137}
+                \end{align*}
+            \item NOTE: $p(\mathbf X | \mu)$ is not a prob dist over $\mu$ and not normalized.
+            \item By introducing a prior $p(\mu)$, the posterior given by
+                \begin{align*}
+                    p(\mu | \mathbf X) \propto p(\mathbf X | \mu) p(\mu) \tag{2.139}
+                \end{align*}
+            \item What prior $p(\mu)$ should we choose?
+        \end{itemize}
+    \end{frame}
+
+    \begin{frame}{The task of inferring the mean $\mu$ (the variance $\sigma^2$ is known)}
+        \begin{itemize}
+            \item Recall:
+                \begin{align*}
+                    p(\mathbf X | \mu) = \prod_{n=1}^N p(x_n | \mu)
+                    = \frac{1}{(2\pi\sigma^2)^{N/2}}
+                    \highlightcap[red]{\displaystyle\exp\cbracket{-\frac{1}{2\sigma^2}\sum_{n=1}^N (x_n - \mu)^2}}{The exp of a quadratic form in $\mu$} \tag{2.137}
+                \end{align*}
+            \item The likelihood takes the form of the exp of a quadratic form in $\mu$.
+            \item Thus, if we choose a Gaussian as the prior, the posterior will also be Gaussian.
+            \item We therefore take our prior to be 
+                \begin{align*}
+                    p(\mu) = \mathcal N(\mu | \mu_0, \sigma_0^2). \tag{2.138}
+                \end{align*}
+        \end{itemize}
+    \end{frame}
+    
+    \begin{frame}{The task of inferring the mean $\mu$ (the variance $\sigma^2$ is known)}
+        \begin{itemize}
+            \item The likelihood function:
+                \begin{align*}
+                    p(\mathbf X | \mu) &= \prod_{n=1}^N p(x_n | \mu)
+                    = \frac{1}{(2\pi\sigma^2)^{N/2}}\exp\cbracket{-\frac{1}{2\sigma^2}\sum_{n=1}^N (x_n - \mu)^2} \tag{2.137}
+                \end{align*}
+            \item The prior distribution: $p(\mu) = \mathcal N(\mu | \mu_0, \sigma_0^2)$ \hfill (2.138)
+            \item By using $p(\mu | \mathbf X) \propto p(\mathbf X | \mu) p(\mu)$ (2.139) and normalizing it, \par, 
+                we obtain the posterior (derivation: ex. 2.38):
+                \begin{align*}
+                    p(\mu | \mathbf X) &= \mathcal N(\mu | \mu_N, \sigma_N^2) \tag{2.140} \\
+                    \mu_N &= \frac{\sigma^2}{N\sigma_0^2 + \sigma}\mu_0 + \frac{N\sigma_0^2}{N\sigma_0^2 + \sigma}\mu_\mathrm{ML} \tag{2.141} \\
+                    \frac{1}{\sigma_N^2} &= \frac{1}{\sigma_0^2} + \frac{N}{\sigma^2} \tag{2.142}
+                \end{align*}
+        \end{itemize}
+    \end{frame}
+
+    \begin{supframe}{Solution of ex. 2.38}
+
+    \end{supframe}
+    
+    \begin{frame}{Interpretation of the posterior's params}
+        \begin{itemize}
+            \item Recall:
+                \begin{align*}
+                    p(\mu | \mathbf X) &= \mathcal N(\mu | \mu_N, \sigma_N^2) \tag{2.140} \\
+                    \mu_N &= \frac{\sigma^2}{N\sigma_0^2 + \sigma}\mu_0 + \frac{N\sigma_0^2}{N\sigma_0^2 + \sigma}\mu_\mathrm{ML} \tag{2.141} \\
+                    \frac{1}{\sigma_N^2} &= \frac{1}{\sigma_0^2} + \frac{N}{\sigma^2} \tag{2.142}
+                \end{align*}
+        \end{itemize}
+    \end{frame}
+    
+    \begin{frame}{Sequential estimation with the Bayesian paradigm}
+        \begin{align*}
+            p(\mu | \mathbf X) &\propto p(\mu)\prod_{n=1}^{N}p(x_n | \mu) \\
+            &= \highlightcap<2->[red]{\displaystyle\rbracket{p(\mu)\prod_{n=1}^{N-1}p(x_n | \mu)}}{The posterior after \\ observing $N-1$ data}
+            \highlightcap<2->[blue]{p(x_N | \mu)}{The likelihood \\ with $N$-th data} \tag{2.144}
+        \end{align*}
+        \vspace{-7.5mm}
+        \begin{figure}[h]\centering
+            \includegraphics[height=4.0cm]{./figs/Figure2_12.pdf}\hspace{1em}Figure 2.12
+        \end{figure}
+    \end{frame}
+    
+    \begin{frame}{The task of inferring the precision $\lambda$ (the mean $\mu$ is known)}
+        Hello metropolis!
+    \end{frame}
 
     \begin{frame}{Title}
         Hello metropolis!
